--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>React App</title>
+    <title>MOVIE REVIEW APPLICATION</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
